# automata

./: .hgignore  LICENSE  OldDFA.hs  Test.hs  automata.cabal  fsa.cabal
Data/Automaton/: Class.hs  DFA.hs  FunDFA.hs  IntDFA.hs  Levenshtein.hs  NFA.hs  TiedDFA.hs
Data/FiniteAutomata/: Class.hs  DFA.hs  IntDFA.hs  Levenshtein.hs  NFA.hs  TiedDFA.hs
